fixing overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,7 @@
     max-width: 1em;
     float: left;
 }
+
+body {
+    margin-top: 40px;
+}
